Fixed the navbar z-index bug.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -10,6 +10,7 @@ html{
 .nav-wrapper{
     background-color: white;
     color: black;
+    box-shadow: none!important;
 }
 
 nav{
